

public class ScienceCard extends Card {

    public ScienceCard(String name) {
        super(name);

    }


    @Override
    public void play() {
        // Ajouter les points de science au joueur
    }
}